# microdnf

./: CMakeLists.txt
dnf/: CMakeLists.txt  dnf-command.h  dnf-main.c
dnf/plugins/install/: dnf-command-install.c  dnf-command-install.h  install.plugin
dnf/plugins/update/: dnf-command-update.c  dnf-command-update.h  update.plugin
